--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-           <h1> Hugo Leonardo de Assis- RA:1411272<h1>
+           <h1> Nome: Hugo Leonardo de Assis- RA:1411272<h1>
+             <h1> Curso: Curso Sistemas da Informação<h1>
+               MAteria: Devops Avaliação Continuada 05
           <hr/>
       </div>
     </div>
